--- a/formacao.html
+++ b/formacao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>Formação Educacional - Portfólio Pessoal</title>  
-    <link rel="stylesheet" href="estilo.css">  
+    <link rel="stylesheet" href="Estilo.css">  
 </head>
 <body>
     <header>
